# InventoryManager

./: README.md  package-lock.json
src/: app.js  index.html  main.rs  package-lock.json  package.json  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/configs/: warehouse.yaml
src-tauri/src/: main.rs
